--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -12,7 +12,7 @@
   border-radius: 15px;
 }
 
-input {
+#logininput {
   width: 100%;
   height: 40px;
   margin: 0 auto;
@@ -42,7 +42,7 @@ input {
     box-shadow: 2px 2px 6px #264767;
     border-radius: 5px;
   }
-  input {
+  #logininput {
     width: 100%;
   }
   #buttons {
