--- a/src/assets/css/Navbar.css
+++ b/src/assets/css/Navbar.css
@@ -1,23 +1,21 @@
 html, body {
-    max-width: 100%;
     overflow-x: hidden;
 }
 #top{
-    background-color: black;
     margin-top: 70px;
     margin-bottom: -45px;
-    height:70px;
-    width:1510px;
     color: white;
+    width:1500px;
 
 }
 #navlink{
     color:white;
-    font-size:18px;
+    font-size:16px;
     margin:auto;
     width:90%;
     height: 50px;
     padding:10px;
+    
     display: flex;
     flex-direction: row;
     
@@ -26,23 +24,68 @@ html, body {
 
 #links{
     margin:auto;
+    padding:10px;
+    margin-top:-5px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-#links:hover{
-    background-color: darkgray;
-    color:white;
-    height:69px;
-    margin-top: -20px;
-    display: inline-block;
-}
+
 #ahref{
     text-decoration: none;
     color: white		;
     display:block;
+
    
 }
-@media only screen and (max-width: 700px) {
+.hvr-sweep-to-top {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+  }
+  .hvr-sweep-to-top:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height:69px;
+    margin-top: -16px;
+    background: #06CB6C;
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+    -webkit-transform-origin: 50% 100%;
+    transform-origin: 50% 100%;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+  }
+  .hvr-sweep-to-top:hover, .hvr-sweep-to-top:focus, .hvr-sweep-to-top:active {
+    color: white;
+  }
+  .hvr-sweep-to-top:hover:before, .hvr-sweep-to-top:focus:before, .hvr-sweep-to-top:active:before {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+
+@media only screen and (max-width: 769px) {
     #top{
         display: none;
     }
 }
+
+
+
+
+
+
