--- a/src/assets/css/Navbar.css
+++ b/src/assets/css/Navbar.css
@@ -1,89 +1,153 @@
-html, body {
-    overflow-x: hidden;
+body{
+  overflow-x: hidden;
 }
+*{box-sizing: border-box;}
+
 #top{
-    margin-top: 70px;
-    margin-bottom: -45px;
-    color: white;
-    width:1500px;
+ margin-top: 70px;
+ margin-bottom: -45px;
+ background-color: #242c42;
+ width:1500px;
+ 
 
 }
 #navlink{
-    color:white;
-    font-size:16px;
-    margin:auto;
-    width:90%;
-    height: 50px;
-    padding:10px;
-    
-    display: flex;
-    flex-direction: row;
-    
+ color:white;
+ font-size:16px;
+ margin:0 auto;
+ width:66%;
+ height: 50px;
+ padding:10px;
+ 
+ display: flex;
+ flex-direction: row;
+ 
 
 }
 
 #links{
-    margin:auto;
-    padding:10px;
-    margin-top:-5px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ margin:auto;
+ padding:10px;
+ margin-top:-5px;
+ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 
 #ahref{
-    text-decoration: none;
-    color: white		;
-    display:block;
+   text-decoration: none;
+   color: white		;
+   display:block;
 
-   
+  
 }
 .hvr-sweep-to-top {
-    display: inline-block;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    position: relative;
-    -webkit-transition-property: color;
-    transition-property: color;
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-  }
-  .hvr-sweep-to-top:before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height:69px;
-    margin-top: -16px;
-    background: #06CB6C;
-    -webkit-transform: scaleY(0);
-    transform: scaleY(0);
-    -webkit-transform-origin: 50% 100%;
-    transform-origin: 50% 100%;
-    -webkit-transition-property: transform;
-    transition-property: transform;
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-timing-function: ease-out;
-    transition-timing-function: ease-out;
-  }
-  .hvr-sweep-to-top:hover, .hvr-sweep-to-top:focus, .hvr-sweep-to-top:active {
-    color: white;
-  }
-  .hvr-sweep-to-top:hover:before, .hvr-sweep-to-top:focus:before, .hvr-sweep-to-top:active:before {
-    -webkit-transform: scaleY(1);
-    transform: scaleY(1);
-  }
+   display: inline-block;
+   vertical-align: middle;
+   -webkit-transform: perspective(1px) translateZ(0);
+   transform: perspective(1px) translateZ(0);
+   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+   position: relative;
+   -webkit-transition-property: color;
+   transition-property: color;
+   -webkit-transition-duration: 0.3s;
+   transition-duration: 0.3s;
+   color: black;
 
-@media only screen and (max-width: 769px) {
-    #top{
-        display: none;
-    }
+ }
+ .hvr-sweep-to-top:before {
+   content: "";
+   position: absolute;
+   z-index: -1;
+   top: 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   height:60px;
+   margin-top: -16px;
+   background: #06CB6C;
+   -webkit-transform: scaleY(0);
+   transform: scaleY(0);
+   -webkit-transform-origin: 50% 100%;
+   transform-origin: 50% 100%;
+   -webkit-transition-property: transform;
+   transition-property: transform;
+   -webkit-transition-duration: 0.3s;
+   transition-duration: 0.3s;
+   -webkit-transition-timing-function: ease-out;
+   transition-timing-function: ease-out;
+ }
+ .hvr-sweep-to-top:hover, .hvr-sweep-to-top:focus, .hvr-sweep-to-top:active {
+   color:#242c42;
+ }
+ .hvr-sweep-to-top:hover:before, .hvr-sweep-to-top:focus:before, .hvr-sweep-to-top:active:before {
+   -webkit-transform: scaleY(1);
+   transform: scaleY(1);
+
+ }
+
+ @media only screen   
+and (min-device-width : 320px)   
+and (max-device-width : 480px)  
+{  #top{
+ display: none;
+} }  
+
+@media only screen and (min-width: 768px) and (max-width: 1280) {
+   #top{
+    width:20%;
+   }
+
+   #navlink{
+     margin: 0 auto;
+     width:120%;
+   }
+}
+@media only screen and (width: 768px){
+ #top{
+  width:105%;
+  
+ }
+
+ #navlink{
+   margin:0 auto;
+   width:92%;
+   height:70px;
+ }
 }
 
+@media only screen and (width: 1024px){
+ #top{
+  width:109%;
+ }
+
+ #navlink{
+   margin: 0 auto;
+   width:100%;
+ }
+}
+
+
+@media only screen and (min-width: 1440px) {
+ #top{
+  width:169%;
+ }
+
+ #navlink{
+   margin: 0 auto;
+   width:60%;
+ }
+}
+
+@media only screen and (width: 1280px) {
+ #top{
+  width:1%;
+ }
+
+ #navlink{
+   margin:0 auto;
+   width:60%;
+ }
+}
 
 
 
