--- a/src/assets/css/SideDrawer.css
+++ b/src/assets/css/SideDrawer.css
@@ -8,8 +8,8 @@ body{
   position: fixed;
   top: 0;
   left: 0;
-  width: 60%;
-  max-width: 400px;
+  width: 58%;
+  max-width: 300px;
   z-index: 200;
   transform: translateX(-100%);
   transition: transform 0.5s ease-out;
@@ -77,3 +77,7 @@ body{
     display: none;
   }
 }
+ @media only screen and (width: 411px){
+    
+ }
+ 
