--- a/src/assets/css/SideDrawer.css
+++ b/src/assets/css/SideDrawer.css
@@ -1,9 +1,9 @@
-body{
+body {
   background-color: white;
 }
 .side-drawer {
   height: 100%;
-  background: #505050;
+  background: #242c42;
   box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
@@ -22,13 +22,15 @@ body{
 .side-drawer ul {
   height: 100%;
   list-style: none;
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
 .side-drawer li {
-  margin: 0;
+  margin-top: 4px;
+  margin-left:-20px;
 }
 
 .side-drawer a:hover,
@@ -39,45 +41,63 @@ body{
 .side-drawer a {
   color: white;
   text-decoration: none;
-  font-size: 1.5em;
-}
-#dropcolor {
-  color: white;
-  margin-left: -16px;
+  font-size: 1em;
 }
 
-#items {
-  color: black;
-  margin-left: -2 0px;
-  font-size: 20px;
-  margin-top: 10px;
-  position: relative;
+#dividerline {
+  background-color: grey;
+  margin: 0 auto;
+  width: 90%;
+  margin-left: -3px;
+  margin-top: 1px;
+  margin-bottom: 5px;
 }
-#avatarimg{
+#avatarimg {
   width: 40px;
-  height:40px;
+  height: 40px;
   margin-top: 90px;
-  margin-left:15px;
+  margin-left: 15px;
 }
-#userid{
-   color:white;
-   width:245px;
-   margin-bottom:-120px;
-
+#userid {
+  color: white;
+  width: 245px;
+  margin-bottom: -120px;
 }
-#username{
+#username {
   margin-left: 62px;
-  color:white;
-  margin-top:-32px;
+  color: white;
+  margin-top: -32px;
   font-size: 20px;
-
 }
 @media (min-width: 769px) {
   .side-drawer {
     display: none;
   }
 }
- @media only screen and (width: 411px){
-    
- }
- 
+@media only screen and (width: 411px) {
+}
+@media only screen and (width: 320px){
+  .side-drawer{
+    width:70%;
+  }
+  #avatarimg {
+    width: 30px;
+    height: 30px;
+    margin-top: 80px;
+    margin-left: 15px;
+  }
+  #userid {
+    color: white;
+    width: 245px;
+    margin-bottom: -120px;
+  }
+  #username {
+    margin-left: 62px;
+    color: white;
+    margin-top: -27px;
+    font-size: 18px;
+  }
+  .side-drawer ul {
+    margin-top:70px;
+  }
+}
