--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,3 +1,6 @@
+body {
+  overflow-x: hidden;
+}
 h1,
 h2,
 h3,
@@ -14,4 +17,10 @@ h5 {
 }
 p {
   font-family: "Fira Code", monospace;
+}
+
+@media (max-width: 767px) {
+  body {
+    overflow-x: hidden;
+  }
 }
