--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -7,8 +7,8 @@ h3,
 h6 {
   color: #30006d;
   font-weight: 600;
-  // font-family: "Akzidenz", "‘Helvetica Neue’", Helvetica, Arial, sans-serif;
-  font-family: "Fira Code", monospace;
+  font-family: "Akzidenz", "‘Helvetica Neue’", Helvetica, Arial, sans-serif;
+  //font-family: "Fira Code", monospace;
 }
 
 h4,
@@ -16,7 +16,8 @@ h5 {
   color: #212529;
 }
 p {
-  font-family: "Fira Code", monospace;
+  // font-family: "Fira Code", monospace;
+  font-family: "Akzidenz", "‘Helvetica Neue’", Helvetica, Arial, sans-serif;
 }
 
 .form-label {
@@ -85,6 +86,26 @@ input {
 
 .link {
   color: blue;
+}
+
+.left-hr-line {
+  border: solid 5px #30006d;
+  width: 200px;
+  text-align: left;
+  align-items: left;
+  justify-items: left;
+  border-radius: 5px;
+  margin-left: -10px;
+}
+
+.right-hr-line {
+  border: solid 5px #30006d;
+  width: 200px;
+  text-align: right;
+  align-items: right;
+  justify-items: right;
+  justify-content: right;
+  border-radius: 5px;
 }
 
 .sticky {
