--- a/src/assets/scss/side_nav.scss
+++ b/src/assets/scss/side_nav.scss
@@ -5,11 +5,13 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 80%;
+  width: 85%;
   max-width: 300px;
   z-index: 200;
   transform: translateX(-100%);
   transition: transform 0.5s ease-out;
+  overflow-y: auto;
+  overflow-x: hidden;
 
   .side-header {
     width: 100%;
@@ -26,6 +28,13 @@
   .join-us {
     width: 100px;
     border: solid 2px #30006d;
+  }
+  .nav-cross {
+    align-items: right;
+    font-size: 25px;
+    color: #30006d;
+    padding: 10px 0 5px 0;
+    cursor: pointer;
   }
 
   ul {
@@ -63,4 +72,17 @@ side-drawer:not(.side-drawer) {
 
 .side-drawer-backdrop {
   position: fixed !important;
+}
+
+@media (max-width: 767px) {
+  .nav-cross {
+    display: none;
+  }
+}
+
+@media (max-width: 329px) {
+  .side-drawer ul li {
+    position: relative;
+    left: 28px;
+  }
 }
