--- a/src/assets/scss/side_nav.scss
+++ b/src/assets/scss/side_nav.scss
@@ -74,6 +74,7 @@ side-drawer:not(.side-drawer) {
   position: fixed !important;
 }
 
+// -----------------------------------
 @media (max-width: 767px) {
   .nav-cross {
     display: none;
