--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -13,3 +13,41 @@
     border-left: solid 6px #b89ddb;
   }
 }
+
+// Footer Nav BAr ---------------------------
+.footer-navbar {
+  position: fixed;
+  bottom: -1px;
+  display: block;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+
+  z-index: 999;
+  background-color: #30006d;
+  width: 100%;
+  height: 40px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+
+  border: none;
+  box-shadow: 0 -2px 8px 0px #b89ddb;
+  height: auto;
+
+  i {
+    color: #d1b6f5;
+    font-size: 20px;
+  }
+  p {
+    padding: 0;
+    margin: 0;
+    color: #d1b6f5;
+    font-size: 11px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-navbar {
+    display: none;
+  }
+}
