--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -2,7 +2,7 @@
   justify-content: space-between;
   .card-shadow {
     border: none;
-    box-shadow: 0 7px 4px 0px rgba(0, 0, 0, 0.09);
+    box-shadow: 0 7px 10px 5px rgba(0, 0, 0, 0.09);
     height: auto;
     border-radius: 5px;
   }
@@ -33,6 +33,10 @@
       font-weight: 600;
     }
   }
+}
+
+.activities {
+  text-align: center;
 }
 
 @media (max-width: 767px) {
