--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -23,15 +23,17 @@
   justify-content: center;
   align-content: center;
 
+  transition: bottom 0.4s;
+
   z-index: 999;
   background-color: #30006d;
   width: 100%;
-  height: 40px;
+  height: 45px;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
 
   border: none;
-  box-shadow: 0 -2px 8px 0px #b89ddb;
+  box-shadow: 0 -1px 8px 0px #b89ddb;
   height: auto;
 
   i {
@@ -44,6 +46,10 @@
     color: #d1b6f5;
     font-size: 11px;
   }
+}
+
+.footer-navbar-hide {
+  bottom: -70px;
 }
 
 @media only screen and (min-width: 768px) {
