--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -20,6 +20,10 @@ p {
   font-family: "Akzidenz", "‘Helvetica Neue’", Helvetica, Arial, sans-serif;
 }
 
+i {
+  cursor: pointer;
+}
+
 .form-label {
   font-size: 14px;
   color: rgb(61, 79, 88);
