--- a/src/assets/scss/category.scss
+++ b/src/assets/scss/category.scss
@@ -11,6 +11,15 @@
         font-weight: 700;
         align-items: center;
       }
+      h2 {
+        font-size: 40px;
+        align-items: center;
+      }
+      .nav-link {
+        font-size: 16px;
+        font-weight: 700;
+        color: black;
+      }
     }
   }
   .tutorial-community-card {
@@ -176,6 +185,11 @@
   i {
     font-size: 35px;
   }
+  .nav-link {
+    font-size: 16px;
+    font-weight: 700;
+    color: black;
+  }
   .red {
     color: rgb(150, 1, 38);
   }
@@ -258,6 +272,10 @@
           font-size: 40px;
           text-align: center;
         }
+        h2 {
+          font-size: 33px;
+          text-align: center;
+        }
         p {
           text-align: center;
           font-size: 16px;
@@ -298,9 +316,19 @@
       }
     }
   }
+
+  .tutorial-card-section {
+    // overflow-x: scroll;
+    overflow-y: hidden;
+    height: auto;
+    // white-space: nowrap;
+    // display: flex;
+  }
+
   .recommend-section {
-    overflow-x: auto;
+    overflow-x: scroll;
     overflow-y: hidden;
     display: flex;
+    white-space: nowrap;
   }
 }
