create profile setup on auth checkup

--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -49,6 +49,10 @@
       width: 600px;
     }
   }
+  .right-section {
+    justify-content: flex-end;
+    align-items: center;
+  }
 }
 
 .header-hide {
