--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -48,6 +48,11 @@
       border-radius: 5px;
       width: 600px;
     }
+
+    .profile-dropdown {
+      width: auto;
+      color: #30006d;
+    }
   }
   .right-section {
     justify-content: flex-end;
