--- a/src/assets/scss/login.scss
+++ b/src/assets/scss/login.scss
@@ -40,7 +40,7 @@
 
   .login-text {
     font-family: "Akzidenz", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: rgb(33, 49, 60);
+    color: #30006b;
     font-size: 32px;
     line-height: 40px;
     letter-spacing: 0px;
@@ -63,8 +63,8 @@
     font-family: "Akzidenz", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: normal;
     font-size: 14px;
-    color: rgb(137, 152, 155);
-    background-color: rgb(231, 238, 236);
+    color: #ffffff;
+    background-color: #30006b;
     border-radius: 5px;
     transition: all 120ms ease 0s;
     border-width: 1px;
