--- a/src/assets/scss/profile.scss
+++ b/src/assets/scss/profile.scss
@@ -9,7 +9,7 @@
 }
 
 .edit-profile-btn {
-  width: auto;
+  width: 200px;
   border: solid 2px #30006d;
   font-size: 14px;
 }
@@ -23,6 +23,30 @@
 .bio {
   font-size: 12px;
   color: #30006d;
+}
+
+.edit-submit-btn {
+  width: 100px;
+  height: 50px;
+  border-radius: 7px;
+  background-color: #30006d;
+  color: #ffffff;
+  :hover {
+    background-color: white;
+  }
+}
+
+.graduation-details {
+  i {
+    margin-right: 15px;
+  }
+  h6 {
+    margin-top: 20px;
+  }
+  border: none;
+  box-shadow: 0 7px 4px 0px rgba(0, 0, 0, 0.09);
+  height: auto;
+  border-radius: 5px;
 }
 
 .profile-dashboard {
