handle uload image with cloudnary and setup

--- a/src/assets/scss/landing_page.scss
+++ b/src/assets/scss/landing_page.scss
@@ -9,12 +9,17 @@
   }
   h2 {
     color: #fdd023;
+    font-size: 25px;
+    margin-top: 20px;
+  }
+  .heading-second {
+    font-size: 28px;
   }
 
   .qoute {
     font-size: 15px;
     color: white;
-    margin-top: 90px;
+    margin-top: 70px;
   }
 
   .get-started-button {
