--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -44,9 +44,11 @@
       background-color: whitesmoke;
     }
     .dropdown-menu {
+      margin-top: 20px;
       border: solid 2px #30006d;
       border-radius: 5px;
       width: 600px;
+      height: 300px;
     }
   }
   .right-section {
