--- a/src/assets/scss/side_nav.scss
+++ b/src/assets/scss/side_nav.scss
@@ -15,14 +15,20 @@
 
   .side-header {
     width: 100%;
-    border-bottom: solid 3px #30006d;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
     h2 {
-      font-size: 20px;
+      font-size: 16px;
       text-decoration: quote($string: "Hello Learner");
       margin: 0;
       font-style: italic;
+    }
+    i {
+      font-size: 30px;
+      color: #673de6;
+    }
+    p {
+      font-size: 9px;
     }
   }
   .join-us {
@@ -41,23 +47,55 @@
     width: 100%;
     justify-content: center;
     list-style-type: none;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    text-decoration: none;
+    :hover {
+      background-color: #673de6;
+      color: #ffffff;
+      text-decoration: none;
+      li {
+        span {
+          color: #ffffff;
+        }
+      }
+    }
     li {
       width: 90%;
       align-items: right;
       justify-content: right;
-      padding: 8px 0 8px 0;
+      padding: 6px 0 6px 0;
       margin: 20px 0 20px 0;
       background-color: rgb(205, 205, 243);
       border-top-left-radius: 600px;
       border-bottom-left-radius: 600px;
       position: relative;
+      text-decoration: none;
       left: 29px;
       span {
         text-align: left;
         color: #30006d;
-        font-size: 16px;
+        font-size: 14px;
         margin-left: 20px;
+        text-decoration: none;
       }
+    }
+  }
+
+  ul {
+    &::-webkit-scrollbar-track {
+      border-radius: 10px;
+      background-color: #f1efef;
+    }
+
+    &::-webkit-scrollbar {
+      width: 5px;
+      height: 10px;
+      background-color: #fff;
+    }
+    &::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      background-color: #c3c3c3;
     }
   }
 }
