--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -24,6 +24,24 @@ p {
 i {
   cursor: pointer;
 }
+.red {
+  color: rgb(150, 1, 38);
+}
+.green {
+  color: rgb(46, 131, 12);
+}
+.blue {
+  color: rgb(6, 67, 124);
+}
+.orange {
+  color: orangered;
+}
+.voilet {
+  color: #673de6;
+}
+.yellow {
+  color: yellow;
+}
 
 .form-label {
   font-size: 14px;
